# PyAlgebraLib

./: LICENSE  README.md  efficientAlgebra.py  pyAlgebra.py  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
src/: pyAlgebra.py
src/pyalgebralib/: __init__.py  config.py  core.py  helpers.py
